# Robocat-ROS

./: .gitignore  LICENSE  README.md  fitxers-sistema-linux
docs/: i2c_overlays.txt  ros_system_setup.md
fitxers-sistema-linux/: robocat-cam.service  robocat_cam.sh
robocat_behavior/: package.xml  setup.cfg  setup.py
robocat_behavior/resource/: robocat_behavior
robocat_behavior/robocat_behavior/: __init__.py  behavior_node.py  mode_manager_node.py
robocat_bringup/: package.xml  setup.cfg  setup.py
robocat_bringup/config/: audio.yaml  behavior.yaml  commands.yaml  pairing.yaml  telemetry.yaml  vision.yaml  webrtc.yaml
robocat_bringup/launch/: robocat.launch.py
robocat_control/: package.xml  setup.cfg  setup.py
robocat_control/robocat_control/: cmd_node.py
robocat_description/: CMakeLists.txt  package.xml
robocat_hw/: package.xml  setup.cfg  setup.py
robocat_hw/robocat_hw/: mic_node.py  oled_message_node.py  pi_status_node.py  sensors_node.py  speaker_node.py  system_init_node.py  telemetry_node.py  web_telemetry_node.py  ws_command_node.py
robocat_msgs/: CMakeLists.txt  package.xml
robocat_msgs/msg/: Telemetry.msg
robocat_pairing/: package.xml  setup.cfg  setup.py
robocat_pairing/robocat_pairing/: pairing_node.py
robocat_video/: package.xml  setup.cfg  setup.py
robocat_video/robocat_video/: webrtc_signaling_node.py  webrtc_streamer_node.py
robocat_vision/: package.xml  setup.cfg  setup.py
robocat_vision/resource/: robocat_vision
robocat_vision/robocat_vision/: __init__.py  container_detection.py  plate_detection.py  vision_node.py  (+1 more)
(+22 files in other folders)
