<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocat_hw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="22conan12@gmail.com">robocat-v2</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-luma.oled</exec_depend>
  <exec_depend>python3-qrcode</exec_depend>
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>python3-lgpio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
